<resources>
    <string name="app_name">Life Mate</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string-array name="gender">
        <item>Choose your gender…</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">Hi %s,\ni can help you to check your health this week.</string>
    <string name="input_hint">Please fill this assessment for us to check your health.</string>
    <string name="height">Height</string>
    <string name="centimeter">Centimeter</string>
    <string name="weight">Weight</string>
    <string name="kilogram">Kilogram</string>
    <string name="input_todo_text">How well do you complete your weekly to-do list?</string>
    <string name="hint_todo_min">Not at all</string>
    <string name="hint_todo_max">Very well</string>
    <string name="input_help_text">How many people do you to help achieve a better life?</string>
    <string name="hint_help_min">None</string>
    <string name="hint_help_max">People or\nmore</string>
    <string name="input_passion_text">How many hours do you spend everyday doing what you are passionate about?</string>
    <string name="hint_passion_min">None</string>
    <string name="hint_passion_max">Hours</string>
    <string name="hint_reward_max">Times or more</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="personal_data">Personal Data</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="re_type_new_password">Re-type new password</string>
    <string name="password">Password</string>
    <string name="input_reward_text">How many times you can give self-reward every week?</string>
    <string name="ok">OK</string>
    <string name="info">Info</string>
    <string name="hint_input_help">> A reflection of your altruism or selflessness (see the TED video from Matthieu Ricard \'How to let altruism be your guide\')\n> e.g.: caring for your family, actively supporting a friend, mentoring, coaching, developing or promoting a co-worker\n> Over a period of 12 months.</string>
    <string name="hint_input_todo">> Include your weekly goals, work- and personal-related tasks\n> On a scale of 0 = not at all to 10 = very well</string>
    <string name="hint_input_passion">> Daily hours spent doing what you are passionate and dreaming about, and/or contributing to a greater cause: health, education, peace, society development</string>
    <string name="hint_input_reward">> Include meditation, praying and relaxation activities such as fitness, walking in a park or lunch breaks.</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="day">Monday</string>
    <string name="date">29 May 2023</string>
    <string name="no_history_yet">No history yet</string>
    <string name="connection_failed">Connection failed please check your internet and try again</string>
    <string name="try_again">Try again</string>
    <string name="history_text">BMI %1$s | STRESS %2$s</string>
    <string name="about_lifemate">About Lifemate</string>
    <string name="lifemate_description">LifeMate is your ultimate health prediction app, powered by advanced machine learning technology. We understand that maintaining a healthy lifestyle can be challenging amidst busy schedules and limited access to reliable information. That\'s why we created LifeMate - to simplify your journey towards better health.\n\nWith LifeMate, you can effortlessly track your health metrics and receive personalized predictions. Our app currently predicts BMI and stress levels, helping you understand your body mass index and manage stress effectively. But we don\'t stop there - we\'re continuously expanding our predictive capabilities to cover a range of diseases and conditions.\n\nOur team is dedicated to empowering you with the knowledge to prevent and manage potential health risks. LifeMate analyzes your data and provides personalized insights, enabling you to make informed decisions about your well-being. We\'re here to support you with tailored recommendations, motivational tips, and helpful guidance.\n\nJoin the LifeMate community today and take control of your health. Embrace a healthier future with our user-friendly app and unlock the full potential of your well-being. Start your journey to better health with LifeMate now.</string>
    <string name="stress_bad_tittle">High stress level</string>
    <string name="stress_bad">Wow, your stress level is so high :(\nBut don\'t worry, we have some tips for you to reduce your daily stress:\n1. Do a relaxation exercise, such as taking 10 very slow breaths in and out. Or try an imagery exercise: "Imagine being in your favorite vacation place, maybe the beach or in nature."\n2. Stretch your muscles. Your muscles tense up under stress. Relieve that tension by stretching.\n3. Reach out for help. We all want to be independent, but it’s okay to ask a friend or family member to simply listen to your concerns or to help you with activities, such as getting groceries, mowing the lawn, or lifting something heavy. Relieving a burden — either physical or mental — will help reduce stress.\nsource : https://www.health.harvard.edu/staying-healthy/top-ways-to-reduce-daily-stress</string>
    <string name="stress_good_tittle">Low stress level</string>
    <string name="stress_good">Congratulations! Your stress level is low :), please maintain your healthy lifestyle </string>
    <string name="tittle_1">Very Underweight</string>
    <string name="tittle_2">Underweight</string>
    <string name="tittle_3">Healthy</string>
    <string name="tittle_4">Overweight</string>
    <string name="tittle_5">Obesity</string>
    <string name="tittle_6">Very Obese</string>
    <string name="text_1">Embrace the journey towards a healthier weight! Seek guidance from healthcare professionals who will help you develop a plan tailored to your needs. Together, you can gradually increase your weight through a balanced diet and strength-building exercises. Let\'s build a stronger, healthier you!</string>
    <string name="text_2">You\'re on the path to reaching your optimal weight! Focus on a well-balanced diet that fuels your body with the right nutrients. With guidance from professionals, you\'ll discover the power of nourishing foods and portion control. Embrace this opportunity to nurture your body and thrive!</string>
    <string name="text_3">Congratulations on achieving a healthy BMI! You\'re living proof that balance is key. Continue prioritizing your well-being by staying active, eating nutritious meals, and nourishing your body. Remember, a healthy lifestyle is a lifelong adventure filled with vitality and joy!</string>
    <string name="text_4">It\'s time to embark on a transformative journey towards a healthier you! Team up with healthcare professionals who will create a personalized plan to manage your weight. Through regular physical activity, delicious and nutritious foods, and sustainable lifestyle changes, you\'ll unleash your inner strength and vitality.</string>
    <string name="text_5">Today marks the beginning of your transformative story! Embrace the opportunity to conquer obesity with the help of dedicated professionals. Their expertise will guide you on a path of positive change. With determination, perseverance, and the right support, you\'ll rewrite your narrative and discover a healthier, happier you!</string>
    <string name="text_6">Your journey to a healthier weight begins now! Together with healthcare professionals, you\'ll overcome obstacles and embrace a new chapter of your life. Their comprehensive support, encompassing medical, nutritional, and lifestyle interventions, will empower you to make lasting changes. You have the strength within you to create a remarkable transformation!</string>


</resources>