<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changepass.ChangePassowordActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_shadow_background"
        android:elevation="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/edt_current_pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_edit_text" />


        <com.example.lifemate.ui.customview.PwEditText
            android:id="@+id/edt_new_pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingHorizontal="16dp"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_edit_text" />

        <EditText
            android:id="@+id/edt_new_pass_again"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"
            android:hint="@string/re_type_new_password"
            android:paddingHorizontal="16dp"
            android:drawablePadding="12dp"
            android:background="@drawable/custom_edit_text" />


        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="16dp"
            android:enabled="true"
            android:text="@string/save"
            android:textSize="15sp"
            android:background="@drawable/custom_green_button"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/custom_edit_text"
        android:padding="10dp"
        android:visibility="gone"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>