<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.input.InputActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo_lifemate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/input_hint"
            android:textColor="@color/dark_green"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/height"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/edt_height"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_edit_text"
            android:elevation="10dp"
            android:hint="@string/centimeter"
            android:inputType="number"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/weight"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_height" />

        <EditText
            android:id="@+id/edt_weight"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_edit_text"
            android:elevation="10dp"
            android:hint="@string/kilogram"
            android:inputType="number"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/btn_hint_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_info_24"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/input_todo_text"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_hint_todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_weight" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_todo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_edit_text"
            android:elevation="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <TextView
                android:id="@+id/hint_todo1"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/hint_todo_min"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/slider_todo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/slider_todo" />


            <com.google.android.material.slider.Slider
                android:id="@+id/slider_todo"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:paddingVertical="32dp"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/hint_todo2"
                app:layout_constraintStart_toEndOf="@+id/hint_todo1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hint_todo2"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/hint_todo_max"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/slider_todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/slider_todo" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btn_hint_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_info_24"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/input_help_text"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_hint_help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_todo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_edit_text"
            android:elevation="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <TextView
                android:id="@+id/hint_help1"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/hint_help_min"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.slider.Slider
                android:id="@+id/slider_help"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:paddingVertical="32dp"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/hint_help2"
                app:layout_constraintStart_toEndOf="@+id/hint_help1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hint_help2"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/hint_help_max"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btn_hint_passion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_info_24"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/input_passion_text"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_hint_passion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_help" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_passion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_edit_text"
            android:elevation="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <TextView
                android:id="@+id/hint_passion1"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/hint_help_min"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.slider.Slider
                android:id="@+id/slider_passion"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:paddingVertical="32dp"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/hint_passion2"
                app:layout_constraintStart_toEndOf="@+id/hint_passion1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hint_passion2"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/hint_passion_max"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btn_hint_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_info_24"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/input_reward_text"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_hint_reward"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_passion" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_reward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_edit_text"
            android:elevation="10dp"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <TextView
                android:id="@+id/hint_reward1"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/hint_help_min"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.slider.Slider
                android:id="@+id/slider_reward"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:paddingVertical="32dp"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/hint_reward2"
                app:layout_constraintStart_toEndOf="@+id/hint_reward1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hint_reward2"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/hint_reward_max"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_check"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_green_button"
            android:enabled="true"
            android:text="Check My Health"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_reward" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/custom_edit_text"
            android:padding="10dp"
            android:translationZ="90dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.653"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>